--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
@@ -57,7 +57,7 @@
   */
  body {
    font-family: "Noto Sans", sans-serif;
-   background-color: #EBBC4E;
+   background-color: $font-black;
  }
  
  .banner {
@@ -91,186 +91,19 @@
      height: 65rem;
    }
  }
- .box {
-   background-color: white;
-   align-content: center;
+
+ .space {
+    padding: 1rem;
  }
- @media only screen and (max-width: 600px) {
-   .box {
-     margin: 15px;
-     height: 8rem;
-   }
- }
- @media only screen and (min-width: 600px) {
-   .box {
-     margin: 20px;
-     height: 11rem;
-   }
- }
- @media only screen and (min-width: 992px) {
-   .box {
-     margin: 25px;
-     height: 15rem;
-   }
- }
- 
- @media only screen and (max-width: 600px) {
-   .grid {
-     position: relative;
-   }
-   .grid-temp {
-     display: grid;
-     position: relative;
-     grid-template-columns: 6rem auto 6rem;
-     grid-template-rows: 2rem 4rem 2rem;
-     height: 100%;
-     width: 100%;
-   }
-   .picback img {
-     position: relative;
-     display: block;
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
-   }
-   .item1 {
-     grid-column: 1;
-     grid-row: 1 / span 2;
-     margin: 0;
-   }
-   .item2 {
-     grid-column: 1/ span 3;
-     grid-row: 1;
-     margin: 0;
-   }
-   .item3 {
-     grid-column: 3;
-     grid-row: 2 / span 2;
-     margin: 0;
-   }
- }
- @media only screen and (min-width: 600px) {
-   .grid {
-     position: relative;
-   }
-   .grid-temp {
-     display: grid;
-     position: relative;
-     grid-template-columns: 8rem auto 8rem;
-     grid-template-rows: 3rem 5rem 3rem;
-     height: 100%;
-     width: 100%;
-   }
-   .picback img {
-     position: relative;
-     display: block;
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
-   }
-   .item1 {
-    grid-column: 1;
-    grid-row: 1 / span 2;
-    margin: 0;
-  }
-  .item2 {
-    grid-column: 1/span 3;
-    grid-row: 1;
-    margin: 0;
-  }
-  .item3 {
-    grid-column: 3;
-    grid-row: 2 / span 2;
-    margin: 0;
-  }
- }
- @media only screen and (min-width: 992px) {
-   .grid {
-     position: relative;
-   }
-   .grid-temp {
-     display: grid;
-     position: relative;
-     grid-template-columns: 12.5rem auto 12.5rem;
-     grid-template-rows: 2.5rem 10rem 2.5rem;
-     height: 100%;
-     width: 100%;
-   }
-   .picback img {
-     position: relative;
-     display: block;
-     width: 100%;
-     height: 100%;
-     object-fit: cover;
-   }
-   .item1 {
-    grid-column: 1;
-    grid-row: 1 / span 2;
-    margin: 0;
-  }
-  .item2 {
-    grid-column: 1/span 3;
-    grid-row: 1;
-    margin: 0;
-  }
-  .item3 {
-    grid-column: 3;
-    grid-row: 2 / span 2;
-    margin: 0;
-  }
- }
- @media only screen and (max-width: 600px) {
-   .quotation {
-     display: block;
-     position: relative;
-     padding: 2rem 20px;
-     font-style: italic;
-     color: #5DA3B2;
-     text-align: center;
-     background: transparent;
-   }
-   .quotation p {
-     line-height: 2rem;
-     font-size: 2rem;
-   }
- }
- @media only screen and (min-width: 600px) {
-   .quotation {
-     display: block;
-     position: relative;
-     padding: 1.5rem 20px;
-     font-style: italic;
-     color: #5DA3B2;
-     text-align: center;
-   }
-   .quotation p {
-     line-height: 3rem;
-     font-size: 3rem;
-   }
- }
- @media only screen and (min-width: 992px) {
-   .quotation {
-     display: block;
-     position: relative;
-     padding: 2rem 20px;
-     font-style: italic;
-     color: #5DA3B2;
-     text-align: center;
-   }
-   .quotation p {
-     line-height: 5rem;
-     font-size: 5rem;
-   }
- }
- 
 
  @media only screen and (max-width: 600px) { 
   .carousel {
     position: relative;
     margin: 0;
+    padding: 0;
     width: 100%;
-    height: 24rem;
-    background-color: white;
+    height: 18rem;
+    background-color: black;
     max-width: 100vw;
     .carousel-indicators {
       list-style: none;
@@ -279,27 +112,21 @@
       width: 100%;
     }
     .carousel-indicators li, .carousel-indicators li.active {
-      width: 3rem;
-      height: 3rem;
+      width: 1rem;
+      height: 1rem;
       position: relative;
       margin: 12px;       
-      border-radius: 0;  
+      border-radius: 50%;  
       border: none; 
-    }
-    .carousel-indicators li img {
-      opacity: 30%;
-    }
-    .carousel-indicators li.active img {
-      opacity: 80%;
-    }
-    .carousel-indicators img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
     }
     .carousel-item {
       height: 100%;
+      img {
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+        opacity: 30%;  
+      }
     }
     .carousel-caption {
       position: absolute;
@@ -308,24 +135,19 @@
       left: 0%;
       width: 100%;
       text-align: center;
-      color: #5DA3B2;
+      color: rgb(3, 99, 83);
     }
     .carousel-caption h1 {
-      font-size: 8rem;
+      font-size: 5rem;
       font-weight: 900;
       text-transform: uppercase;
-      line-height: 8rem;
+      line-height: 6rem;
     }
     .carousel-caption h2 {
-      font-size: 4rem;
-      font-weight: 600;
-      line-height: 4.5rem;
-    }
-    .carousel-caption h3 {
-      color: #EBBC4E;
       font-size: 2rem;
-      font-weight: 300;
-      line-height: 2rem;
+      font-weight: 600;
+      line-height: 3rem;
+      color: rgb(145, 103, 12);
     }
   }
 
