--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/modules/variables.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/modules/variables.scss
@@ -7,8 +7,8 @@
 /**
  * Typography
  */
- @import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
-$font-family-base: 'Noto Sans', sans-serif;
+ @import url('https://fonts.googleapis.com/css?family=Neucha&display=swap');
+$font-family-base: 'Neucha', cursive;;
 
 /**
  * Colors
