--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
@@ -3,7 +3,7 @@
  * ---
  * Main `sass` file. Import here `sass` files
  */
- @import url("https://fonts.googleapis.com/css?family=Noto+Sans&display=swap");
+ @import url('https://fonts.googleapis.com/css?family=Neucha&display=swap');
  * {
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
@@ -56,7 +56,7 @@
   * ---
   */
  body {
-   font-family: "Noto Sans", sans-serif;
+   font-family: $font-family-base;
    background-color: $font-black;
  }
  
