--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
@@ -78,26 +78,10 @@
      display: flex;
      height: 20rem;
    }
- }
- @media only screen and (min-width: 600px) {
-   .container-fluid {
-     display: flex;
-     height: 50rem;
-   }
- }
- @media only screen and (min-width: 992px) {
-   .container-fluid {
-     display: flex;
-     height: 65rem;
-   }
- }
-
- .space {
+   .space {
     padding: 1rem;
- }
-
- @media only screen and (max-width: 600px) { 
-  .carousel {
+  }
+   .carousel {
     position: relative;
     margin: 0;
     padding: 0;
@@ -172,15 +156,21 @@
       height: 4rem;
     } 
   }
-}
-
-@media only screen and (min-width: 600px) { 
-  .carousel {
+ }
+ @media only screen and (min-width: 600px) {
+   .container-fluid {
+     display: flex;
+     height: 50rem;
+   }
+   .space {
+    padding: 3rem;
+  }
+   .carousel {
     position: relative;
     margin: 0;
     width: 100%;
     height: 36rem;
-    background-color: white;
+    background-color: black;
     max-width: 100vw;
     .carousel-indicators {
       list-style: none;
@@ -189,27 +179,26 @@
       width: 100%;
     }
     .carousel-indicators li, .carousel-indicators li.active {
-      width: 5rem;
-      height: 5rem;
+      width: 3rem;
+      height: 3rem;
       position: relative;
       margin: 15px;       
-      border-radius: 0;  
+      border-radius: 50%;  
       border: none; 
-    }
-    .carousel-indicators li img {
-      opacity: 30%;
-    }
-    .carousel-indicators li.active img {
-      opacity: 80%;
     }
     .carousel-indicators img {
       position: absolute;
       width: 100%;
-      height: 100%;
       top: 0;
     }
     .carousel-item {
       height: 100%;
+      img {
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+        opacity: 30%;  
+      }
     }
     .carousel-caption {
       position: absolute;
@@ -218,24 +207,19 @@
       left: 0%;
       width: 100%;
       text-align: center;
-      color: #5DA3B2;
+      color: rgb(3, 99, 83);
     }
     .carousel-caption h1 {
-      font-size: 11rem;
+      font-size: 10rem;
       font-weight: 900;
       text-transform: uppercase;
       line-height: 11rem;
     }
     .carousel-caption h2 {
-      font-size: 6rem;
+      font-size: 6.5rem;
       font-weight: 600;
-      line-height: 6.5rem;
-    }
-    .carousel-caption h3 {
-      color: #EBBC4E;
-      font-size: 4rem;
-      font-weight: 300;
-      line-height: 4rem;
+      line-height: 8rem;
+      color: rgb(145, 103, 12);
     }
   }
 
@@ -260,15 +244,21 @@
       height: 6rem;
     } 
   }
-}
-
-@media only screen and (min-width: 992px) { 
-  .carousel {
+ }
+ @media only screen and (min-width: 992px) {
+   .container-fluid {
+     display: flex;
+     height: 65rem;
+   }
+   .space {
+    padding: 5rem;
+  }
+   .carousel {
     position: relative;
     margin: 0;
     width: 100%;
     height: 50rem;
-    background-color: white;
+    background-color: black;
     max-width: 100vw;
     .carousel-indicators {
       list-style: none;
@@ -277,27 +267,21 @@
       width: 100%;
     }
     .carousel-indicators li, .carousel-indicators li.active {
-      width: 7rem;
-      height: 7rem;
+      width: 5rem;
+      height: 5rem;
       position: relative;
       margin: 20px;       
-      border-radius: 0;  
+      border-radius: 50%;  
       border: none; 
-    }
-    .carousel-indicators li img {
-      opacity: 30%;
-    }
-    .carousel-indicators li.active img {
-      opacity: 80%;
-    }
-    .carousel-indicators img {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      top: 0;
     }
     .carousel-item {
       height: 100%;
+      img {
+        object-fit: cover;
+        height: 100%;
+        width: 100%;
+        opacity: 30%;  
+      }
     }
     .carousel-caption {
       position: absolute;
@@ -306,24 +290,19 @@
       left: 0%;
       width: 100%;
       text-align: center;
-      color: #5DA3B2;
+      color: rgb(3, 99, 83);
     }
     .carousel-caption h1 {
       font-size: 14rem;
       font-weight: 900;
       text-transform: uppercase;
-      line-height: 14rem;
+      line-height: 16rem;
     }
     .carousel-caption h2 {
-      font-size: 8rem;
+      font-size: 9rem;
       font-weight: 600;
-      line-height: 8.5rem;
-    }
-    .carousel-caption h3 {
-      color: #EBBC4E;
-      font-size: 5.5rem;
-      font-weight: 300;
-      line-height: 5.5rem;
+      line-height: 11rem;
+      color: rgb(145, 103, 12);
     }
   }
 
@@ -348,7 +327,9 @@
       height: 8rem;
     } 
   }
-}
+ }
+  
+
  
  /*# sourceMappingURL=style.css.map */
  
