--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/style.css
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/style.css
@@ -136,24 +136,11 @@ body {
     display: flex;
     height: 20rem;
   }
-}
-@media only screen and (min-width: 600px) {
-  .container-fluid {
-    display: flex;
-    height: 50rem;
-  }
-}
-@media only screen and (min-width: 992px) {
-  .container-fluid {
-    display: flex;
-    height: 65rem;
-  }
-}
-.space {
-  padding: 1rem;
-}
 
-@media only screen and (max-width: 600px) {
+  .space {
+    padding: 1rem;
+  }
+
   .carousel {
     position: relative;
     margin: 0;
@@ -231,12 +218,21 @@ body {
   }
 }
 @media only screen and (min-width: 600px) {
+  .container-fluid {
+    display: flex;
+    height: 50rem;
+  }
+
+  .space {
+    padding: 3rem;
+  }
+
   .carousel {
     position: relative;
     margin: 0;
     width: 100%;
     height: 36rem;
-    background-color: white;
+    background-color: black;
     max-width: 100vw;
   }
   .carousel .carousel-indicators {
@@ -246,27 +242,26 @@ body {
     width: 100%;
   }
   .carousel .carousel-indicators li, .carousel .carousel-indicators li.active {
-    width: 5rem;
-    height: 5rem;
+    width: 3rem;
+    height: 3rem;
     position: relative;
     margin: 15px;
-    border-radius: 0;
+    border-radius: 50%;
     border: none;
-  }
-  .carousel .carousel-indicators li img {
-    opacity: 30%;
-  }
-  .carousel .carousel-indicators li.active img {
-    opacity: 80%;
   }
   .carousel .carousel-indicators img {
     position: absolute;
     width: 100%;
-    height: 100%;
     top: 0;
   }
   .carousel .carousel-item {
     height: 100%;
+  }
+  .carousel .carousel-item img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    opacity: 30%;
   }
   .carousel .carousel-caption {
     position: absolute;
@@ -275,24 +270,19 @@ body {
     left: 0%;
     width: 100%;
     text-align: center;
-    color: #5DA3B2;
+    color: #036353;
   }
   .carousel .carousel-caption h1 {
-    font-size: 11rem;
+    font-size: 10rem;
     font-weight: 900;
     text-transform: uppercase;
     line-height: 11rem;
   }
   .carousel .carousel-caption h2 {
-    font-size: 6rem;
+    font-size: 6.5rem;
     font-weight: 600;
-    line-height: 6.5rem;
-  }
-  .carousel .carousel-caption h3 {
-    color: #EBBC4E;
-    font-size: 4rem;
-    font-weight: 300;
-    line-height: 4rem;
+    line-height: 8rem;
+    color: #91670c;
   }
 
   .button-container {
@@ -318,12 +308,21 @@ body {
   }
 }
 @media only screen and (min-width: 992px) {
+  .container-fluid {
+    display: flex;
+    height: 65rem;
+  }
+
+  .space {
+    padding: 5rem;
+  }
+
   .carousel {
     position: relative;
     margin: 0;
     width: 100%;
     height: 50rem;
-    background-color: white;
+    background-color: black;
     max-width: 100vw;
   }
   .carousel .carousel-indicators {
@@ -333,27 +332,21 @@ body {
     width: 100%;
   }
   .carousel .carousel-indicators li, .carousel .carousel-indicators li.active {
-    width: 7rem;
-    height: 7rem;
+    width: 5rem;
+    height: 5rem;
     position: relative;
     margin: 20px;
-    border-radius: 0;
+    border-radius: 50%;
     border: none;
-  }
-  .carousel .carousel-indicators li img {
-    opacity: 30%;
-  }
-  .carousel .carousel-indicators li.active img {
-    opacity: 80%;
-  }
-  .carousel .carousel-indicators img {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
   }
   .carousel .carousel-item {
     height: 100%;
+  }
+  .carousel .carousel-item img {
+    object-fit: cover;
+    height: 100%;
+    width: 100%;
+    opacity: 30%;
   }
   .carousel .carousel-caption {
     position: absolute;
@@ -362,24 +355,19 @@ body {
     left: 0%;
     width: 100%;
     text-align: center;
-    color: #5DA3B2;
+    color: #036353;
   }
   .carousel .carousel-caption h1 {
     font-size: 14rem;
     font-weight: 900;
     text-transform: uppercase;
-    line-height: 14rem;
+    line-height: 16rem;
   }
   .carousel .carousel-caption h2 {
-    font-size: 8rem;
+    font-size: 9rem;
     font-weight: 600;
-    line-height: 8.5rem;
-  }
-  .carousel .carousel-caption h3 {
-    color: #EBBC4E;
-    font-size: 5.5rem;
-    font-weight: 300;
-    line-height: 5.5rem;
+    line-height: 11rem;
+    color: #91670c;
   }
 
   .button-container {
