--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
@@ -72,6 +72,7 @@
    width: 100%;
    object-fit: cover;
  }
+
  
  @media only screen and (max-width: 600px) {
    .container-fluid {
@@ -90,10 +91,13 @@
     background-color: black;
     max-width: 100vw;
     .carousel-indicators {
-      list-style: none;
-      bottom: -3px;
-      margin: 0;
-      width: 100%;
+      top: 10px;
+      flex-direction: column;
+      align-items: flex-end;
+      padding: 0;
+      max-width: 100%;
+      margin-right: 0;
+      width: auto;
     }
     .carousel-indicators li, .carousel-indicators li.active {
       width: 1rem;
@@ -105,6 +109,7 @@
     }
     .carousel-item {
       height: 100%;
+      transition: .6s ease-in-out top;
       img {
         object-fit: cover;
         height: 100%;
@@ -179,6 +184,9 @@
       margin: 0;
       width: 100%;
     }
+    .carousel-indicators {
+
+  }
     .carousel-indicators li, .carousel-indicators li.active {
       width: 3rem;
       height: 3rem;
