--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/style.css
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/style.css
@@ -178,10 +178,13 @@ body {
     max-width: 100vw;
   }
   .carousel .carousel-indicators {
-    list-style: none;
-    bottom: -3px;
-    margin: 0;
-    width: 100%;
+    top: 10px;
+    flex-direction: column;
+    align-items: flex-end;
+    padding: 0;
+    max-width: 100%;
+    margin-right: 0;
+    width: auto;
   }
   .carousel .carousel-indicators li, .carousel .carousel-indicators li.active {
     width: 1rem;
@@ -193,6 +196,7 @@ body {
   }
   .carousel .carousel-item {
     height: 100%;
+    transition: 0.6s ease-in-out top;
   }
   .carousel .carousel-item img {
     object-fit: cover;
