--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/pages/home.scss
@@ -98,6 +98,7 @@
       max-width: 100%;
       margin-right: 0;
       width: auto;
+      padding-right: 10px;
     }
     .carousel-indicators li, .carousel-indicators li.active {
       width: 1rem;
