--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/style.css
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/style.css
@@ -185,6 +185,7 @@ body {
     max-width: 100%;
     margin-right: 0;
     width: auto;
+    padding-right: 10px;
   }
   .carousel .carousel-indicators li, .carousel .carousel-indicators li.active {
     width: 1rem;
