--- a/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/modules/variables.scss
+++ b/wordpress/wp-content/themes/wordpress-theme-starter-master/sass/modules/variables.scss
@@ -7,8 +7,9 @@
 /**
  * Typography
  */
- @import url('https://fonts.googleapis.com/css?family=Neucha&display=swap');
-$font-family-base: 'Neucha', cursive;;
+ @import url('https://fonts.googleapis.com/css?family=Caesar+Dressing&display=swap');
+$font-family-base: 'Caesar Dressing', cursive;
+
 
 /**
  * Colors
